--- a/src/index.css
+++ b/src/index.css
@@ -238,8 +238,9 @@
     width: 100%;
     height: 100%;
     text-align: center;
-    transition: transform 0.6s;
+    transition: transform 0.6s ease-in-out;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
   }
   .flip-card-inner.flipped {
     transform: rotateY(180deg);
